test/fail/downcast_variant04.v3
//@execute 0=!TypeCheckException; 1=!TypeCheckException; 2=!TypeCheckException; 3=3
type T { case A(v: int); case B(v: int); case C(v: int); case D(v: int); }
def d: T;
def all = [d, T.B(1), T.C(1), T.D(1)];
def k = cast<T, T.D>();
def main(a: int) -> int {
	return k(all[a]).tag;
}
def cast<X, Y>() -> X -> Y { return Y.!<X>; }
